diesel_compile_tests/tests/fail/derive/bad_mysql_type.stderr
error: unexpected end of input, expected parentheses
 --> tests/fail/derive/bad_mysql_type.rs:6:20
  |
6 | #[diesel(mysql_type)]
  |                    ^
  |
  = help: The correct format looks like `#[diesel(mysql_type(name = "foo"))]`

error: expected attribute `name`
  --> tests/fail/derive/bad_mysql_type.rs:10:21
   |
10 | #[diesel(mysql_type())]
   |                     ^
   |
   = help: The correct format looks like #[diesel(mysql_type(name = "foo"))]

error: expected parentheses
  --> tests/fail/derive/bad_mysql_type.rs:14:21
   |
14 | #[diesel(mysql_type = "foo")]
   |                     ^

error: unexpected end of input, expected `=`
  --> tests/fail/derive/bad_mysql_type.rs:18:25
   |
18 | #[diesel(mysql_type(name))]
   |                         ^
   |
   = help: The correct format looks like `#[diesel(mysql_type(name = "foo"))]`

error: expected `=`
  --> tests/fail/derive/bad_mysql_type.rs:22:25
   |
22 | #[diesel(mysql_type(name()))]
   |                         ^

error: expected string literal
  --> tests/fail/derive/bad_mysql_type.rs:26:28
   |
26 | #[diesel(mysql_type(name = Foo))]
   |                            ^^^

error: unknown attribute, expected `name`
  --> tests/fail/derive/bad_mysql_type.rs:30:21
   |
30 | #[diesel(mysql_type(what))]
   |                     ^^^^
